# freetype-gl

./: .gitignore  CMakeLists.txt  HOW_TO_GENERATE_DISTMAP.txt  Makefile  Readme.md  TODO  compute-distmap.c  demo-distance-field.c  main.cpp  make_png.py  makefont.c  run.sh  texture-atlas.c  texture-atlas.cpp  texture-atlas.h  texture-font.c  texture-font.cpp  texture-font.h  vec234.h
src/: main.cpp
src/app/: Application.cpp  Application.hpp
src/core/: Atlas.cpp  Atlas.hpp  Error.hpp  FontTexture.cpp  FontTexture.hpp  Library.cpp  Library.hpp  Texture.cpp  Texture.hpp  TextureAtlas.cpp  TextureAtlas.hpp  TextureFont.cpp  TextureFont.hpp  ft.hpp
src/ft/: Error.hpp  FontFace.cpp  FontFace.hpp  Glyph.cpp  Glyph.hpp  gl.hpp
src/math/: Vector2.hpp  Vector3.hpp  Vector4.hpp
src/utils/: Command.cpp  Command.hpp  convert.hpp
